# copper

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  wrapper.h
gl/: Cargo.toml  build.rs
gl-sys/: Cargo.toml  build.rs  wrapper.h
gl-sys/src/: lib.rs
gl/src/: gl.rs  lib.rs
glew-sys/: Cargo.toml  build.rs
glfw-sys/: Cargo.toml  build.rs  wrapper.h
glut-sys/: Cargo.toml  build.rs
glut-sys/src/: lib.rs
res/animations/: player_model.dae
res/fonts/: copperDf.fnt  copperFont.fnt  copperSdf.fnt  test.fnt
res/shaders/: entityFragmentShader.glsl  entityVertexShader.glsl  envMapFrag.glsl  envMapVert.glsl  fragmentShader.glsl  guiFragmentShader.glsl  guiTextFragShader.glsl  guiTextVertexShader.glsl  guiVertexShader.glsl  normalMappedFragShader.glsl  normalMappedVertShader.glsl  particleFragShader.glsl  particleVertShader.glsl  skyboxFragmentShader.glsl  skyboxVertexShader.glsl  terrainFragShader.glsl  terrainVertexShader.glsl  vertexShader.glsl  waterFragShader.glsl  waterVertexShader.glsl
src/: camera.rs  constants.rs  display.rs  display_manager.rs  entities.rs  gl.rs  lib.rs  loader.rs  main.rs  obj_loader.rs  raw_model.rs  renderer.rs  utils.rs
src/animations/: animated_model.rs  animation.rs  animator.rs  joint.rs  keyframe.rs  mod.rs
src/display/: display.rs  framebuffers.rs  mod.rs
src/entities/: animated_entity.rs  camera.rs  debug_entity.rs  entity.rs  entity_traits.rs  ground.rs  light.rs  mod.rs  player.rs  skybox.rs  terrain.rs  water_tile.rs
src/guis/: mod.rs  panel.rs  text.rs
texture_lib/: Cargo.toml
(+104 files in other folders)
