[package]
name = "copper"
version = "0.1.0"
authors = ["martin <martin.papanek@gmail.com>"]
build = "build.rs"

[dependencies]
libc = "0.2.0"
texture_lib = { path = "texture_lib" }

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[build-dependencies]
gl_generator = "0.10.0"